--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Comic Agung</title>
+    <link rel="stylesheet" href="./jquey.js">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -16,7 +18,7 @@
   <body>
     <div class="container" id="app">
       <!-- Logout button and notification for success / error event -->
-      <div class="row my-3">
+      <div class="row my-3" id="logout">
         <button id="btn-logout" class="btn btn-primary ml-auto">Logout</button>
       </div>
 
@@ -25,7 +27,8 @@
       </div>
 
       <!-- This is Login Form  -->
-      <div>
+        <div>
+      <div id="login-form">
         <h1>Login</h1>
         <form class="my-4">
           <div class="form-group">
@@ -57,50 +60,55 @@
         </form>
       </div>
 
-      <div>
+      </div>
+
+      <!-- register-form -->
+
+      <div id="register-form">
         <h1>Register</h1>
         <form class="my-4">
           <div class="form-group">
             <label for="name">Name</label>
             <input
-              type="name"
+            type="name"
               class="form-control"
               name="name"
               id="name"
               required
-            />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input
               type="email"
               class="form-control"
               name="email"
               id="email"
               required
-            />
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input
+              />
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input
               type="password"
               class="form-control"
               name="password"
               id="password"
               required
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">
-            Submit
-          </button>
-          <button type="submit" class="btn btn-warning">
-            Random User
-          </button>
-          <button type="submit" class="btn btn-info">
-            Login
-          </button>
-        </form>
-      <ist -->
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Submit
+            </button>
+            <button type="submit" class="btn btn-warning">
+              Random User
+            </button>
+            <button type="submit" class="btn btn-info">
+              Login
+            </button>
+          </form>
+        </div>
+          <!-- <ist --> -->
       <div>
         <h1>Comic Collection</h1>
         <div class="row my-4">
@@ -120,7 +128,7 @@
         </div>
 
       <!-- This is form page to update a comic -->
-      <div>
+      <div/div>
         <h1>Update Comic</h1>
         <form class="my-4">
           <div class="form-group">
@@ -139,7 +147,10 @@
             Submit
           </button>
         </form>
-      </di>
+      </div>
     </div>
+    </div>
+  <!-- Code injected by live-server -->
   </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </html>
